# rust_fractal_visualization

./: README.md
fractal_visualization/: Cargo.toml
fractal_visualization/src/: gui.rs  main.rs
fractal_visualization/src/mandelbrot/: gui.rs  mandelbrot_calculator.rs  mod.rs  palettes.rs
