[package]
name = "fractal_visualization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9"
minifb = "0.25.0"
actix-web = "4.5.1"
serde_json = "1.0.114"
env_logger = "0.11.2"
serde = { version = "1.0.197", features = ["derive"] }
derive_more = "0.99.17"
aws-config = "1.1.7"
